--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "async": "2.0.1",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
-    "grunt": "1.0.1",
+    "grunt": "^1.0.3",
     "jsonwebtoken": "^8.3.0",
     "npm": "^6.1.0",
     "passport": "^0.4.0",
